[fix] fix user diary options btn layout issue

--- a/app/assets/stylesheets/pages/_diary.css.sass
+++ b/app/assets/stylesheets/pages/_diary.css.sass
@@ -20,10 +20,6 @@
   background-color: $c-user-sidebar-bg
   .user-diary-baku
     @extend %baku
-  .user-diary-edit-btn-wrapper
-    position: absolute
-    right: 20px
-    top: 20px
 
   .user-diary-info-wrapper
     padding-left: 70px
@@ -127,6 +123,9 @@
   @extend %col-8
   .user-status-info
     margin-top: 0
+  .user-diary-edit-btn-wrapper
+    margin-top: 25px
+    text-align: right
   .user-diary-detail-wrapper
     margin-top: 25px
 
